--- a/null/package.json
+++ b/null/package.json
@@ -9,9 +9,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
-    "react-icons": "^4.4.0",
+    "react-icons": "^4.6.0",
     "react-scripts": "5.0.1",
     "react-typed": "^1.2.0",
+    "tw-elements": "^1.0.0-alpha12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
