--- a/null/public/manifest.json
+++ b/null/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "WEARENULL",
+  "name": "WELCOME TO THE VOID",
   "icons": [
     {
       "src": "favicon.ico",
