--- a/null/package.json
+++ b/null/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.2.3",
+    "handlebars": "^4.7.7",
     "next.js": "^1.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
