--- a/null/package.json
+++ b/null/package.json
@@ -16,7 +16,6 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.2.3",
-    "handlebars": "^4.7.7",
     "next.js": "^1.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -56,5 +55,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "cheerio": "^1.0.0-rc.12",
+    "form-data": "^4.0.0",
+    "handlebars": "^4.7.7",
+    "mailgun.js": "^8.0.6",
+    "postmark": "^3.0.15"
   }
 }
