--- a/null/package.json
+++ b/null/package.json
@@ -24,6 +24,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^4.6.0",
     "react-is": "^18.2.0",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
